WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255580
AXUnvisitedLinkSearchKey and AXVisitedLinkSearchKey UI element searches don't return display:contents links
https://bugs.webkit.org/show_bug.cgi?id=255580
Summary
AXUnvisitedLinkSearchKey and AXVisitedLinkSearchKey UI element searches don't...
Tyler Wilcock
Reported
2023-04-17 23:34:48 PDT
...
Attachments
Patch
(11.49 KB, patch)
2023-04-17 23:36 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(11.30 KB, patch)
2023-04-18 18:45 PDT
,
Tyler Wilcock
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-17 23:35:02 PDT
<
rdar://problem/108182099
>
Tyler Wilcock
Comment 2
2023-04-17 23:36:52 PDT
Created
attachment 465956
[details]
Patch
chris fleizach
Comment 3
2023-04-18 18:43:51 PDT
Comment on
attachment 465956
[details]
Patch Feel like we can remove those fixmes On Mac you need to Grant TCC access for accessibility
chris fleizach
Comment 4
2023-04-18 18:44:16 PDT
(In reply to chris fleizach from
comment #3
)
> Comment on
attachment 465956
[details]
> Patch > > Feel like we can remove those fixmes > > On Mac you need to Grant TCC access for accessibility
And if you do that, visited status of webpages is the least of your worries
Tyler Wilcock
Comment 5
2023-04-18 18:45:56 PDT
Created
attachment 465975
[details]
Patch
EWS
Comment 6
2023-04-18 21:50:23 PDT
Committed
263116@main
(0c1d06272bff): <
https://commits.webkit.org/263116@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 465975
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug