AXUnvisitedLinkSearchKey and AXVisitedLinkSearchKey UI element searches don't return display:contents links https://bugs.webkit.org/show_bug.cgi?id=255580 rdar://problem/108182099

Reviewed by Chris Fleizach.

Move AccessibilityRenderObject::isUnvisited and AccessibilityRenderObject::isVisited to AccessibilityObject
since these methods should not require a renderer.

* LayoutTests/accessibility/mac/search-predicate-visited-links-expected.txt:
* LayoutTests/accessibility/mac/search-predicate-visited-links.html:
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isUnvisited const):
(WebCore::AccessibilityObject::isVisited const):
* Source/WebCore/accessibility/AccessibilityObject.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::isUnvisited const): Deleted.
(WebCore::AccessibilityRenderObject::isVisited const): Deleted.
* Source/WebCore/accessibility/AccessibilityRenderObject.h:

Canonical link: https://commits.webkit.org/263116@main